src/components/Navbar/Navbar.css
nav {
  width: 100%;
  color: #fff;
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 100;
}
ul {
  margin: 10px;
}
.logo {
  width: 250px;
}
nav ul li {
  list-style: none;
  display: inline;
  margin: 10px 20px;
  font-size: 16px;
  cursor: pointer;
}
.dark-nav {
  background: #212ea0;
  transition: 0.5s;
}
.menu-icon {
  display: none;
}

/* Media Query */
@media (max-width: 1000px) {
  .logo {
    width: 140px;
  }
  nav ul li {
    margin: 10px 15px;
    font-size: 16px;
    cursor: pointer;
  }
}
@media (max-width: 840px) {
  nav {
    padding: 15px 0;
  }
  nav ul {
    margin: 0;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    background: #212ea0;
    z-index: -1;
    width: 210px;
    padding-top: 70px;
    transition: 0.5s;
  }
  nav ul li {
    display: block;
    margin: 25px 40px;
  }
  .menu-icon {
    display: block;
    width: 30px;
    cursor: pointer;
    margin-right: 30px;
  }
  .hide-mobile-menu {
    right: -210px;
  }
}

